Updated Github link to the new repo.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -31,7 +31,7 @@
     <string name="about_project_notes">This project was developed for the course SICI 4185: Mobile Device Programming Introduction at UPR-Ponce.</string>
 
     <string name="url_kofi">https://ko-fi.com/MelodyHSong</string>
-    <string name="url_github">https://github.com/MelodyHSong</string>
+    <string name="url_github">https://github.com/MelodyHSong/Towns.IO</string>
 
     <string name="link_kofi">Support</string>
     <string name="link_github">View Code</string>
