--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="about_project_notes">Este proyecto fue desarrollado para el curso SICI 4185: Introducción a la Programación de Dispositivos Móviles de la UPR-Ponce.</string>
 
     <string name="url_kofi">https://ko-fi.com/MelodyHSong</string>
-    <string name="url_github">https://github.com/MelodyHSong</string>
+    <string name="url_github">https://github.com/MelodyHSong/Towns.IO</string>
 
     <string name="link_kofi">Apoyar</string>
     <string name="link_github">Ver Código</string>
